karnc/tests/fixtures/positive/123_http_get_path_param/src/orders.karn
context orders

type OrderId = opaque String

service api from http {
  on GET("/orders/:id") (id: OrderId) -> Effect[HttpResult[String]] {
    Ok("an order")
  }
}
