karnc/tests/fixtures/negative/95_http_unbound_path_param/src/svc.karn
context svc

service api from http {
  on GET("/orders/:id") () -> Effect[HttpResult[String]] {
    Ok("none")
  }
}
